--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
     <div class="row">
       <div class="col-sm-4">
         <h3>단계 1</h3>
-        <p>HTML, CSS, Javascript 기초 공부</p>
+        <p>PYTHON</p>
         <p>Learning~</p>
       </div>
       <div class="col-sm-4">
         <h3>단계 2</h3>
-        <p>부트스트랩, jQuery 이나 Javascript 중,고급단계 공부</p>
+        <p>JAVA</p>
         <p>Learning~</p>
       </div>
       <div class="col-sm-4">
         <h3>단계 3</h3>        
-        <p>node.js 공부</p>
+        <p>C++</p>
         <p>Learning~</p>
       </div>
     </div>
