Update Bookmarks & modify html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>정규범 페이지</title>
+  <title>BUMIS</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -25,7 +25,7 @@
 
   <nav class="navbar fixed-top navbar-expand-sm bg-dark navbar-dark">
       <!-- Brand -->
-      <a class="navbar-brand" href="#">규버미스</a>
+      <a class="navbar-brand" href="#">BUMIS</a>
       <!-- Links -->
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -74,7 +74,7 @@
 
   <div class="jumbotron text-center">
       <h1>MY PAGE</h1>
-      <p>부트스트랩을 이용한 페이지이다.</p> 
+      <p>부트스트랩을 이용한 페이지</p> 
   </div>   
   <div style="text-align: center" class="container">
     <div class="row">
@@ -99,7 +99,7 @@
   <div style="text-align: center">
   <button type="button" class="btn btn-outline-primary">Primary</button>
   <button type="button" class="btn btn-outline-secondary">Secondary</button>
-  <button type="button" onclick="location.href='./src/kbMap/map.html'" class="btn btn-outline-success">success</button>
+  <button type="button" class="btn btn-outline-success">success</button>
   <button type="button" onclick="location.href='./src/html/bookmarks.html'" class="btn btn-outline-info">bookmarks</button>
   <button type="button" onclick="location.href='./src/html/privacy.html'" class="btn btn-outline-warning">privacy</button>
   <button type="button" class="btn btn-outline-danger">Danger</button>
@@ -119,7 +119,7 @@
   <div class="container">
       <h2 style="margin-left : 30px">웹 프로그래밍 재미도</h2>
       <div class="progress">
-        <div class="progress-bar" style="width:60%">63%</div>
+        <div class="progress-bar" style="width:60%">61%</div>
       </div>
   </div><br>
 
