--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!-- Links -->
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="./src/html/link.html">Link</a>
+          <a class="nav-link" href="./src/html/">Link</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link 2</a>
@@ -79,19 +79,19 @@
   <div style="text-align: center" class="container">
     <div class="row">
       <div class="col-sm-4">
-        <h3>단계 1</h3>
-        <p>PYTHON</p>
-        <p>Learning~</p>
+        <h3>1</h3>
+        <p>java</p>
+        <p>spring..</p>
       </div>
       <div class="col-sm-4">
-        <h3>단계 2</h3>
-        <p>JAVA</p>
-        <p>Learning~</p>
+        <h3>2</h3>
+        <p>javascript</p>
+        <p>typescript, react..</p>
       </div>
       <div class="col-sm-4">
-        <h3>단계 3</h3>        
-        <p>C++</p>
-        <p>Learning~</p>
+        <h3>3</h3>        
+        <p>python</p>
+        <p>test..</p>
       </div>
     </div>
   </div><br><br>
@@ -119,7 +119,7 @@
   <div class="container">
       <h2 style="margin-left : 30px">웹 프로그래밍 재미도</h2>
       <div class="progress">
-        <div class="progress-bar" style="width:60%">61%</div>
+        <div class="progress-bar" style="width:70%">70%</div>
       </div>
   </div><br>
 
