--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!-- Links -->
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="./src/html/">Link</a>
+          <a class="nav-link" href="./src/html/portfolio.html">Link</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link 2</a>
